// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label/> component Render Label component - disabled 1`] = `
<label
  class="label labelClass disabled required"
  for="someInput"
>
  LabelText
  <span
    aria-hidden="true"
  >
    *
  </span>
</label>
`;

exports[`<Label/> component Render Label component - optional field 1`] = `
<label
  class="label labelClass"
  for="someInput"
>
  LabelText
</label>
`;

exports[`<Label/> component Render Label component - required field 1`] = `
<label
  class="label labelClass required"
  for="someInput"
>
  LabelText
  <span
    aria-hidden="true"
  >
    *
  </span>
</label>
`;

exports[`<Label/> component Render Label component without any properties 1`] = `
<label
  class="label"
>
  label text
</label>
`;
